--- a/camel-archetype-spring-boot-fuse-7-bom/src/main/resources/archetype-resources/src/main/resources/static/index.html
+++ b/camel-archetype-spring-boot-fuse-7-bom/src/main/resources/archetype-resources/src/main/resources/static/index.html
@@ -5,9 +5,9 @@
 
 <body>
    <h1>Welcome to the ${artifactId} interface</h1>
-   <p><a href="camel/ping">Ping</a></p>
-   <p><a href="camel/api-docs">Swagger Definition</a></p>
-   <p><a href="/webjars/swagger-ui/3.23.5/index.html?url=/camel/api-docs">Swagger UI</a></p>
+   <p><a href="api/ping">Ping</a></p>
+   <p><a href="api/api-docs">Swagger Definition</a></p>
+   <p><a href="/webjars/swagger-ui/3.23.5/index.html?url=/api/api-docs">Swagger UI</a></p>
 </body>
 
 </html>
